fix alignment

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ strong {
   background-color: hsl(0deg, 0%, 100%);
   padding: 8px 16px;
   border-bottom: 8px solid hsl(0deg, 0%, 60%);
+  margin-left: -16px;
 }
 
 .indented-heading {
